SB security version changed to 2.7